[tool.poetry]
name = "twitter-bot"
version = "0.1.0"
description = ""
authors = ["Suren <parsyansuren@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
selenium-authenticated-proxy = "^1.1.2"
selenium = "^4.20.0"
flet = "^0.22.1"
tqdm = "^4.66.4"
pyhm = "^0.0.7"
matplotlib = "^3.8.4"
undetected-chromedriver = "^3.5.5"
poetry-pyinstaller-plugin = "^1.1.8"
pyinstaller = "^6.6.0"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
